HDL ANT Deployment Package/retrieveUnpackaged/objects/P_H_Details__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>P&amp;H Details</relationshipLabel>
        <relationshipName>P_H_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attn_To__c</fullName>
        <label>Attn To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Address_1__c</fullName>
        <label>Check Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Address_2__c</fullName>
        <label>Check Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_City__c</fullName>
        <label>Check City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Country__c</fullName>
        <label>Check Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Name__c</fullName>
        <label>Check Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_State__c</fullName>
        <label>Check State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Zip__c</fullName>
        <label>Check Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Draw_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Draw Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>P&amp;H Details (Draw Site)</relationshipLabel>
        <relationshipName>P_H_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <label>NPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P_H_Notes__c</fullName>
        <label>P&amp;H Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_H_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P&amp;H Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid_by_NPI__c</fullName>
        <label>Paid by NPI</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>P&amp;H Details</relationshipLabel>
        <relationshipName>P_H_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>W9_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W9 Received</label>
        <type>Checkbox</type>
    </fields>
    <label>P&amp;H Details</label>
    <nameField>
        <label>P&amp;H Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P&amp;H Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>